--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,6 @@
 [submodule "anki/victor"]
 	path = anki/victor
 	url = https://github.com/os-vector/wire-os-victor
-[submodule "poky/poky"]
-	path = poky/poky
-	url = https://github.com/yoctoproject/poky
-	branch = walnascar
 [submodule "poky/meta-openembedded"]
 	path = poky/meta-openembedded
 	url = https://github.com/openembedded/meta-openembedded
@@ -15,3 +11,9 @@
 [submodule "anki/vic-cloudless"]
 	path = anki/vic-cloudless
 	url = https://github.com/kercre123/vic-cloudless
+[submodule "poky/bitbake"]
+	path = poky/bitbake
+	url = https://github.com/openembedded/bitbake.git
+[submodule "poky/openembedded-core"]
+	path = poky/openembedded-core
+	url = https://github.com/openembedded/openembedded-core.git
