Remove crash and log uploader service files, make sure fake-hwclock is cleaned

--- a/poky/victor/meta-anki/recipes/anki-robot/files/vic-robot.service
+++ b/poky/victor/meta-anki/recipes/anki-robot/files/vic-robot.service
@@ -3,8 +3,8 @@ Description=Victor robot daemon
 SourcePath=/anki/bin/vic-robot
 PartOf=anki-robot.target
 
-Wants=vic-crashuploader.service
-After=vic-crashuploader.service
+Wants=vic-init.service
+After=vic-init.service
 
 [Service]
 PermissionsStartOnly=true
